# BeatPrints

./: .gitignore  .readthedocs.yaml  MANIFEST.IN  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  setup.py  w.py  w2.py  {example}.env
.github/instructions/: ins.instructions.md
.github/workflows/: publish-to-pypi.yml
BeatPrints/: __init__.py  consts.py  deez.py  dim.py  errors.py  image.py  lyrics.py  main.py  metadata.py  poster.py  spotify.py  utils.py  wallpaper.py  write.py  writing.py  yt_music.py
BeatPrints/api/: api_client.py  spotify.py  yt_music.py
app/: app.py
app/static/: stylesheet.css
app/templates/: index.html
beatprints/: __init__.py  __main__.py  image.py  lyrics.py  main.py  poster.py  spotify.py  utils.py  writing.py
cli/: __init__.py  __main__.py  conf.py  exutils.py  prompt.py  validate.py
docs/: conf.py  index.rst  requirements.txt
docs/guidebook/: cli.rst  generate.rst  guide.rst  index.rst
docs/misc/: FAQ.rst  index.rst
docs/reference/: deez.rst  errors.rst  index.rst  lyrics.rst  poster.rst  spotify.rst
docs/reference/api/: apiclient.rst  index.rst  spotify.rst  ytmusic.rst
src/: EXAMPLE.env  color.py  dim.py  errors.py  image.py  lyrics.py  main.py  poster.py  spotify.py  utils.py  writing.py
src/fontfallback/: __init__.py  writing.py
