[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Beatprints"
description = "A tool that generates eye-catching pinterest-style music posters in python"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "TrueMyst" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Creative Commons Attribution-NonCommercial-ShareAlike 4.0.",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Issue tracker" = "https://github.com/TrueMyst/Beatprints/issues"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }


[tool.setuptools]
packages = [
    "beatprints",
    "beatprints.assets",
    "beatprints.assets.templates",
    "examples",
    "fonts.NotoSansJP",
    "fonts.NotoSansKR",
    "fonts.NotoSansSC",
    "fonts.NotoSansTC",
    "fonts.Oswald",
]
include-package-data = true

[tool.black]
line-length = 125
skip-string-normalization = true

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125

[tool.pyright]
include = [
    "beatprints",
    "beatprints/assets",
    "beatprints/assets/templates",
    "examples",
    "fonts/NotoSansJP",
    "fonts/NotoSansKR",
    "fonts/NotoSansSC",
    "fonts/NotoSansTC",
    "fonts/Oswald",
]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
pythonVersion = "3.8"
typeCheckingMode = "basic"
