[tool.poetry]
name = "BeatPrints"
version = "1.1.5"
description = "Create eye-catching, pinterest-style music posters effortlessly."
authors = ["elysianmyst <74355265+TrueMyst@users.noreply.github.com>"]
license = "CC-BY-NC-4.0"
readme = "README.md"

keywords = ["spotify", "lyrics", "pinterest", "lrclibapi"]
repository = "https://github.com/TrueMyst/BeatPrints"

packages = [{ include = "BeatPrints" }, { include = "cli" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "*"
pylette = "*"
pillow = "*"
lrclibapi = "*"
fonttools = "*"
questionary = "*"
rich = "*"
toml = "*"
spotipy = "*"

[tool.poetry.scripts]
beatprints = 'cli.prompt:main'

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
